# serializer version: 1
# name: test_color_palette_state[rgb-select.wled_rgb_light_live_override-2-live-called_with1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Live override',
      'options': list([
        '0',
        '1',
        '2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgb_light_live_override',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_color_palette_state[rgb-select.wled_rgb_light_live_override-2-live-called_with1].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '0',
        '1',
        '2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.wled_rgb_light_live_override',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Live override',
    'platform': 'wled',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'live_override',
    'unique_id': 'aabbccddeeff_live_override',
    'unit_of_measurement': None,
  })
# ---
# name: test_color_palette_state[rgb-select.wled_rgb_light_live_override-2-live-called_with1].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': 'http://127.0.0.1',
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:dd:ee:ff',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': 'esp8266',
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'wled',
        'aabbccddeeff',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'WLED',
    'model': 'DIY light',
    'name': 'WLED RGB Light',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '0.8.5',
    'via_device_id': None,
  })
# ---
# name: test_color_palette_state[rgb-select.wled_rgb_light_segment_1_color_palette-Icefire-segment-called_with0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Segment 1 color palette',
      'options': list([
        'Analogous',
        'April Night',
        'Autumn',
        'Based on Primary',
        'Based on Set',
        'Beach',
        'Beech',
        'Breeze',
        'C9',
        'Cloud',
        'Cyane',
        'Default',
        'Departure',
        'Drywet',
        'Fire',
        'Forest',
        'Grintage',
        'Hult',
        'Hult 64',
        'Icefire',
        'Jul',
        'Landscape',
        'Lava',
        'Light Pink',
        'Magenta',
        'Magred',
        'Ocean',
        'Orange & Teal',
        'Orangery',
        'Party',
        'Pastel',
        'Primary Color',
        'Rainbow',
        'Rainbow Bands',
        'Random Cycle',
        'Red & Blue',
        'Rewhi',
        'Rivendell',
        'Sakura',
        'Set Colors',
        'Sherbet',
        'Splash',
        'Sunset',
        'Sunset 2',
        'Tertiary',
        'Tiamat',
        'Vintage',
        'Yelblu',
        'Yellowout',
        'Yelmag',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgb_light_segment_1_color_palette',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Random Cycle',
  })
# ---
# name: test_color_palette_state[rgb-select.wled_rgb_light_segment_1_color_palette-Icefire-segment-called_with0].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Analogous',
        'April Night',
        'Autumn',
        'Based on Primary',
        'Based on Set',
        'Beach',
        'Beech',
        'Breeze',
        'C9',
        'Cloud',
        'Cyane',
        'Default',
        'Departure',
        'Drywet',
        'Fire',
        'Forest',
        'Grintage',
        'Hult',
        'Hult 64',
        'Icefire',
        'Jul',
        'Landscape',
        'Lava',
        'Light Pink',
        'Magenta',
        'Magred',
        'Ocean',
        'Orange & Teal',
        'Orangery',
        'Party',
        'Pastel',
        'Primary Color',
        'Rainbow',
        'Rainbow Bands',
        'Random Cycle',
        'Red & Blue',
        'Rewhi',
        'Rivendell',
        'Sakura',
        'Set Colors',
        'Sherbet',
        'Splash',
        'Sunset',
        'Sunset 2',
        'Tertiary',
        'Tiamat',
        'Vintage',
        'Yelblu',
        'Yellowout',
        'Yelmag',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.wled_rgb_light_segment_1_color_palette',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Segment 1 color palette',
    'platform': 'wled',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'segment_color_palette',
    'unique_id': 'aabbccddeeff_palette_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_color_palette_state[rgb-select.wled_rgb_light_segment_1_color_palette-Icefire-segment-called_with0].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': 'http://127.0.0.1',
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:dd:ee:ff',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': 'esp8266',
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'wled',
        'aabbccddeeff',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'WLED',
    'model': 'DIY light',
    'name': 'WLED RGB Light',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '0.8.5',
    'via_device_id': None,
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_playlist-Playlist 2-playlist-called_with2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGBW Light Playlist',
      'options': list([
        'Playlist 1',
        'Playlist 2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgbw_light_playlist',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Playlist 1',
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_playlist-Playlist 2-playlist-called_with2].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Playlist 1',
        'Playlist 2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.wled_rgbw_light_playlist',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Playlist',
    'platform': 'wled',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'playlist',
    'unique_id': 'aabbccddee11_playlist',
    'unit_of_measurement': None,
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_playlist-Playlist 2-playlist-called_with2].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': 'http://127.0.0.1',
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:dd:ee:11',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': 'esp8266',
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'wled',
        'aabbccddee11',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'WLED',
    'model': 'DIY light',
    'name': 'WLED RGBW Light',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '0.8.6b4',
    'via_device_id': None,
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_preset-Preset 2-preset-called_with3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGBW Light Preset',
      'options': list([
        'Preset 1',
        'Preset 2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgbw_light_preset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Preset 1',
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_preset-Preset 2-preset-called_with3].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Preset 1',
        'Preset 2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.wled_rgbw_light_preset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Preset',
    'platform': 'wled',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'preset',
    'unique_id': 'aabbccddee11_preset',
    'unit_of_measurement': None,
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_preset-Preset 2-preset-called_with3].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': 'http://127.0.0.1',
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:dd:ee:11',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': 'esp8266',
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'wled',
        'aabbccddee11',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'WLED',
    'model': 'DIY light',
    'name': 'WLED RGBW Light',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '0.8.6b4',
    'via_device_id': None,
  })
# ---
